Trocando o card de 'RSS' por 'DESENVOLVEDORES'

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -135,9 +135,12 @@ body{
             </div>
             <div class="face face2">
                 <div class="content">
-                    <p>
-                    Escolhemos os melhores sites de notícias baseadas em opiniões profissionais e opiniões dos próprios usuários.
-                    </p>
+                    <p>Guilherme Gonzalo Costa Cerda</p>
+		    <p>Joon Hyuk Kim</p>
+		    <p>Lucas Pereira Castelo Branco</p>
+		    <p>João Guilherme De Costa Seike</p>
+		    <p>Kelvin Kang</p>
+		    <p>Ramon Dantas De Jesus</p>
                 </div>
             </div>
         </div>
