--- a/app/views/news/_news_card.html.erb
+++ b/app/views/news/_news_card.html.erb
@@ -73,7 +73,7 @@
 	<img src="https://image.flaticon.com/icons/png/512/37/37090.png" width="2%">
         <% if user_signed_in? %>
             <% if !current_user.news.exists?(item.id) %>
-				<button onclick="save_favorite_ajax(<%= item.id %>)" class="btn btn-dark" id="save_favorite_<%= item.id %>%">Salvar nas favoritas</button>
+				<button onclick="save_favorite_ajax(<%= item.id %>)" class="btn btn-dark" id="save_favorite_<%= item.id %>">Salvar nas favoritas</button>
             <% else %>
                 <button onclick="delete_favorite_ajax(<%= item.id %>)" class="btn btn-dark" id="dalete_favorite_<%= item.id %>%">Excluir das favoritas</button>
             <% end %>
